--- a/index.html
+++ b/index.html
@@ -1,24 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Global Health Tracker</title>
 
     <!-- External CSS file -->
-        <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/style.css" />
 
     <!-- Google Fonts Links -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;1,200&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;1,200&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,400&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Fontawasome Links (for Icons) -->
-    <script src="https://kit.fontawesome.com/267448ee0a.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/267448ee0a.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <!-- Header section -->
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="./index.html">
+            <img
+              src="./Images/main_logo.png"
+              alt="Website logo"
+              class="main_logo"
+            /></a>
+          </li>
 
-    
-</head>
-<body>
-    
-</body>
+          <li><a href="">Home</a></li>
+          <li><a href="">Statistics</a></li>
+          <li><a href="">Global Map </a></li>
+          <li><a href="">News</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Contact</a></li>
+          <li><button class="login-btn">Login</button></li>
+        </ul>
+      </nav>
+    </header>
+    <!-- End of Header section -->
+
+    <!--  -->
+  </body>
 </html>
