navigation added for small screen

--- a/index.html
+++ b/index.html
@@ -26,13 +26,21 @@
     <!-- Header section -->
     <header>
       <nav>
-        <ul>
-          <li>
-            <a href="./index.html">
+        <ul class="logo-section">
+          <a href="./index.html">
             <img
               src="./Images/main_logo.png"
               alt="Website logo"
               class="main_logo"
+          /></a>
+        </ul>
+        <ul>
+          <li>
+            <a href="./index.html">
+              <img
+                src="./Images/main_logo.png"
+                alt="Website logo"
+                class="main_logo"
             /></a>
           </li>
 
@@ -44,10 +52,23 @@
           <li><a href="">Contact</a></li>
           <li><button class="login-btn">Login</button></li>
         </ul>
+        <ul class="toggle_btn">
+          <i class="fa-solid fa-bars-staggered"></i>
+        </ul>
       </nav>
+      <div class="dropdown_menu open">
+        <li><a href="">Home</a></li>
+        <li><a href="">Statistics</a></li>
+        <li><a href="">Global Map </a></li>
+        <li><a href="">News</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact</a></li>
+        <li><button class="login-btn">Login</button></li>
+      </div>
     </header>
     <!-- End of Header section -->
 
     <!--  -->
+    <script src="./script.js"></script>
   </body>
 </html>
