--- a/Statistics.html
+++ b/Statistics.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Global Health Tracker | Home</title>
+    <title>Global Health Tracker | Statistics</title>
 
     <!-- Title image link -->
     <link
