about us updated-1

--- a/about.html
+++ b/about.html
@@ -28,9 +28,8 @@
       src="https://kit.fontawesome.com/267448ee0a.js"
       crossorigin="anonymous"
     ></script>
-  
   </head>
-  
+
   <body>
     <!-- Header section -->
     <header>
@@ -77,7 +76,43 @@
     </header>
     <!-- End of Header section -->
 
+    <!-- About us section -->
+    <section class="about-us-section">
+      <div class="about-us-container1">
+        <h1 class="about-us-heading">
+          About <span> Global Health Tracker </span>
+        </h1>
+        <p class="about-us-p">
+          Health Tracker provides limited, but often useful information, about
+          the state of a population's health and the functioning of its health
+          system. Indicators cannot describe all aspects of health programmes.
+          They offer insights by facilitating comparisons over time and within
+          and between countries and populations.
+        </p>
+      </div>
 
+      <div class="about-us-container2">
+        <h1 class="about-us-heading">What We Do ?</h1>
+        
+          <p class="about-us-p">
+            Welcome to <b> Global Health Tracker </b>, your go-to destination
+            for real-time global health information. Our platform was created
+            with the vision of harnessing the power of data to empower
+            individuals and communities worldwide. In an era where health is of
+            paramount importance, our website serves as a comprehensive global
+            health tracker, providing a wealth of information to foster
+            awareness, understanding, and informed decision-making.
+          </p>
+      </div>
+    </section>
+    <!-- end of about us page -->
+
+    <!-- footer section -->
+
+    <!-- <footer>
+
+    </footer>
+    end of footer section -->
 
     <!-- Javascript file for DOM manipulation and other tasks -->
     <script src="./JS/script.js"></script>
