about us updated-1

--- a/about.html
+++ b/about.html
@@ -93,16 +93,16 @@
 
       <div class="about-us-container2">
         <h1 class="about-us-heading">What We Do ?</h1>
-        
-          <p class="about-us-p">
-            Welcome to <b> Global Health Tracker </b>, your go-to destination
-            for real-time global health information. Our platform was created
-            with the vision of harnessing the power of data to empower
-            individuals and communities worldwide. In an era where health is of
-            paramount importance, our website serves as a comprehensive global
-            health tracker, providing a wealth of information to foster
-            awareness, understanding, and informed decision-making.
-          </p>
+
+        <p class="about-us-p">
+          Welcome to <b> Global Health Tracker </b>, your go-to destination for
+          real-time global health information. Our platform was created with the
+          vision of harnessing the power of data to empower individuals and
+          communities worldwide. In an era where health is of paramount
+          importance, our website serves as a comprehensive global health
+          tracker, providing a wealth of information to foster awareness,
+          understanding, and informed decision-making.
+        </p>
       </div>
     </section>
     <!-- end of about us page -->
