footer section added

--- a/about.html
+++ b/about.html
@@ -108,11 +108,47 @@
     <!-- end of about us page -->
 
     <!-- footer section -->
-
-    <!-- <footer>
-
+    <footer>
+      <div class="footer-1">
+        <img src="./Images/main_logo.png" alt="website_logo" />
+        <h5>&copy; 2024 Global Health Tracker, All rights reserved</h5>
+      </div>
+      <div class="footer-2">
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+        </ul>
+        <ul>
+          <li><a href="./news.html">News and Updates</a></li>
+          <li><a href="./global_map.html">Global Maps</a></li>
+          <li><a href="./Statistics.html">Statistics</a></li>
+        </ul>
+      </div>
+      <div class="footer-3">
+        <ul>
+          <li>
+            <a href="#">
+              <i class="fa-brands fa-square-instagram"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-brands fa-x-twitter"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#"> <i class="fa-brands fa-linkedin-in"></i> </a>
+          </li>
+        </ul>
+      </div>
     </footer>
-    end of footer section -->
+    <!-- end of footer section -->
 
     <!-- Javascript file for DOM manipulation and other tasks -->
     <script src="./JS/script.js"></script>
