--- a/index.html
+++ b/index.html
@@ -76,6 +76,24 @@
     </header>
     <!-- End of Header section -->
 
+  <!-- Hero section -->
+    <section class="hero-section">
+      <div class="hero-section-1">
+        <div class="left-side">
+          <img src="./Images/img1.jpg" class="hero-left-img" alt="">
+        </div>
+        <div class="right-side">
+          <p class="hero-welcome-msg">Welcome to <span> Global Health Tracker,</span> your gateway to a healthier world! As we navigate the intricate landscape of global health, we invite you to explore the latest statistics, trends, and updates that shape the well-being of populations worldwide. Join us on a journey to understand the vital signs of our planet's health and discover how individuals and communities are working towards a healthier future.
+
+          </p>
+        </div>
+      </div>
+    </section>
+  <!-- end of hero section -->
+
+
+
+
     <!-- footer section -->
     <footer>
       <div class="footer-1">
