home page updated

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
       crossorigin="anonymous"
     ></script>
   </head>
-
   <body>
     <!-- Header section -->
     <header>
@@ -95,8 +94,8 @@
         </div>
       </div>
       <div class="hero-section-2">
-        <div class="hero-section-heading">
-          <h1>Our latest News</h1>
+        <div class="sec3-heading">
+          <h2>Our latest News</h2>
         </div>
         <div class="news-cards">
           <div class="img-card iCard-style1">
@@ -182,11 +181,70 @@
           </div>
         </div>
       </div>
+      <div class="hero-section-3">
+        <div class="sec3-heading">
+          <h2>Health Awareness Events</h2>
+          <p>
+            Stay informed about upcoming events dedicated to health awareness.
+            Explore and participate in activities that promote well-being and
+            knowledge in the field of global health.
+          </p>
+        </div>
+        <div class="event-cards">
+          <div class="event-card">
+            <img src="./Images/expert.jpg" alt="experts" class="event-img" />
+            <div class="event-date">22 Feb</div>
+            <h2 class="event-heading">
+              Expert Panel: The Importance of Regular Exercise in Maintaining
+              Heart Health
+            </h2>
+            <p class="event-description">
+              Virtual Event - Join us online for a discussion on the
+              significance of regular exercise in maintaining a healthy heart.
+            </p>
+            <div class="event-learn-more">
+              <a href="">Lern More</a>
+            </div>
+          </div>
+
+          <div class="event-card">
+            <img src="./Images/stress reduce.jpg" alt="experts" class="event-img" />
+            <div class="event-date">27 March</div>
+            <h2 class="event-heading">
+              Workshop: Mindfulness and Stress Reduction Techniques for Better
+              Mental Health.
+            </h2>
+            <p class="event-description">
+              Community Center, 123 Main Street, Cityville, USA - Join us for a
+              practical workshop on mindfulness and stress reduction.
+            </p>
+            <div class="event-learn-more">
+              <a href="">Lern More</a>
+            </div>
+          </div>
+
+          <div class="event-card">
+            <img src="./Images/seminar.jpg" alt="experts" class="event-img" />
+            <div class="event-date">04 April</div>
+            <h2 class="event-heading">
+              Nutrition Seminar: The Role of a Balanced Diet in Preventing
+              Chronic Diseases.
+            </h2>
+            <p class="event-description">
+              Local Auditorium, 456 Oak Avenue, Townsville, USA - Explore the
+              importance of a balanced diet in preventing chronic diseases.
+            </p>
+            <div class="event-learn-more">
+              <a href="">Lern More</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- end of hero section -->
 
     <!-- footer section -->
-    <footer>
+    <footer class="footer-section">
       <div class="footer-1">
         <img src="./Images/main_logo.png" alt="website_logo" />
         <h5>&copy; 2024 Global Health Tracker, All rights reserved</h5>
