--- a/about.html
+++ b/about.html
@@ -79,7 +79,13 @@
     <!-- About us section -->
     <section class="about-us-section">
       <div class="about-us-container1">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,160L48,186.7C96,213,192,267,288,250.7C384,235,480,149,576,144C672,139,768,213,864,202.7C960,192,1056,96,1152,96C1248,96,1344,192,1392,240L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path
+            fill="#fff"
+            fill-opacity="1"
+            d="M0,160L48,186.7C96,213,192,267,288,250.7C384,235,480,149,576,144C672,139,768,213,864,202.7C960,192,1056,96,1152,96C1248,96,1344,192,1392,240L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"
+          ></path>
+        </svg>
         <h1 class="about-us-heading">
           About <span> Global Health Tracker </span>
         </h1>
@@ -90,7 +96,14 @@
           They offer insights by facilitating comparisons over time and within
           and between countries and populations.
         </p>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,160L48,186.7C96,213,192,267,288,250.7C384,235,480,149,576,144C672,139,768,213,864,202.7C960,192,1056,96,1152,96C1248,96,1344,192,1392,240L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path
+            fill="#fff"
+            fill-opacity="1"
+            d="M0,160L48,186.7C96,213,192,267,288,250.7C384,235,480,149,576,144C672,139,768,213,864,202.7C960,192,1056,96,1152,96C1248,96,1344,192,1392,240L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+            ;
+          ></path>
+        </svg>
       </div>
 
       <div class="about-us-container2">
