--- a/index.html
+++ b/index.html
@@ -208,7 +208,11 @@
           </div>
 
           <div class="event-card">
-            <img src="./Images/stress reduce.jpg" alt="experts" class="event-img" />
+            <img
+              src="./Images/stress reduce.jpg"
+              alt="experts"
+              class="event-img"
+            />
             <div class="event-date">27 March</div>
             <h2 class="event-heading">
               Workshop: Mindfulness and Stress Reduction Techniques for Better
