till contact-us page added

--- a/Statistics.html
+++ b/Statistics.html
@@ -76,6 +76,100 @@
     </header>
     <!-- End of Header section -->
 
+    <!--stat-section-1  -->
+    <section class="stat-section">
+      <div class="stat-section-heading">
+        <h1>Country-wise Health Statistics Page</h1>
+      </div>
+      <div class="stat-section-search-input">
+        <input
+          type="text"
+          placeholder="Search your country"
+          name="country-name-searchbar"
+          id="country-name-searchbar"
+          class="country-name-searchbar"
+          list="country-suggestions"
+        />
+        <datalist id="country-suggestions">
+          <option value="Afghanistan"></option>
+          <option value="Bangladesh"></option>
+          <option value="Bhutan"></option>
+          <option value="China"></option>
+          <option value="Maldives"></option>
+          <option value="Myanmar"></option>
+          <option value="Nepal"></option>
+          <option value="Pakistan"></option>
+          <option value="Sri Lanka"></option>
+          <option value="Iran"></option>
+          <option value="Iraq"></option>
+          <option value="Kuwait"></option>
+          <option value="Oman"></option>
+          <option value="Qatar"></option>
+          <option value="Saudi Arabia"></option>
+          <option value="United Arab Emirates"></option>
+          <option value="Bahrain"></option>
+          <option value="Yemen"></option>
+          <option value="Turkmenistan"></option>
+          <option value="Uzbekistan"></option>
+          <option value="Tajikistan"></option>
+          <option value="Kyrgyzstan"></option>
+          <option value="Kazakhstan"></option>
+          <option value="Mongolia"></option>
+          <option value="Russia"></option>
+          <option value="Azerbaijan"></option>
+          <option value="Armenia"></option>
+          <option value="Georgia"></option>
+          <option value="Turkey"></option>
+          <option value="Syria"></option>
+          <option value="Lebanon"></option>
+          <option value="Jordan"></option>
+          <option value="Israel"></option>
+          <option value="Palestine"></option>
+          <option value="Cyprus"></option>
+          <option value="Egypt"></option>
+          <option value="Sudan"></option>
+          <option value="South Sudan"></option>
+          <option value="Ethiopia"></option>
+          <option value="Eritrea"></option>
+          <option value="Djibouti"></option>
+          <option value="Somalia"></option>
+          <option value="Kenya"></option>
+          <option value="Tanzania"></option>
+          <option value="Uganda"></option>
+          <option value="Rwanda"></option>
+        </datalist>
+      </div>
+      <div class="stat-section-search-output">
+        <div class="country-details">
+          <div class="country-name">
+            <h1>Country Name : India</h1>
+          </div>
+          <div class="country-image">
+            <img
+              src="https://www.worldometers.info/img/flags/in-flag.gif"
+              alt="country_image"
+              class="country-img"
+            />
+          </div>
+          <div>
+          </div>
+          <div class="country-updates">
+            <div class="country-update-list">
+              <p><i id="arrow-icon" class="fa-solid fa-arrow-right"> </i>  In 2022, India's healthcare spending was over 2% of its GDP, up from 1.3% in 2020.</p>
+              <p ><i id="arrow-icon" class="fa-solid fa-arrow-right"> </i> In 2020, the healthcare sector was worth about $280 billion, and was expected to reach $372 billion by 2022.</p>
+              <p><i id="arrow-icon" class="fa-solid fa-arrow-right"> </i>India's healthcare industry is one of the country's biggest contributors to jobs and revenue.</p>
+              <p><i id="arrow-icon" class="fa-solid fa-arrow-right"> </i>The hospital sector in India was worth INR 7940.87 billion in 2021, and is expected to reach INR 18,348.78 billion by 2027.</p>
+              <p><i id="arrow-icon" class="fa-solid fa-arrow-right"> </i>India's healthcare system is organized into three levels: primary, secondary, and tertiary.</p>
+              <p><i id="arrow-icon" class="fa-solid fa-arrow-right"> </i>India's healthcare system has a doctor-to-population ratio of 1:2148.</p>
+            
+            </ul>
+            
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--end of stat-section-1  -->
+
     <!-- footer section -->
     <footer>
       <div class="footer-1">
