--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,30 @@
       </div>
     </header>
     <!-- End of Header section -->
+    <!-- staring of contect us page -->
+    <section class="contact-us-section">
+        <div class="sec-one-contact">
+          <img src="./Images/contact.jpg" alt="" class="contact-us-img">
+        </div>
+        <div class="sec-two-contact">
+          <h2>Contact us</h2>
+          <form action="" class="contact-form">
+            <input type="email" name="" id=""
+            class="cnt-input" placeholder="enter your email address">
+            <input type="text" name="" id=""
+            class="cnt-input" placeholder="enter subject">
+            <textarea name="cnt-txtarea" class="cnt-txtarea" placeholder="enter your message" id="" cols="55" rows="10"></textarea>
+            <input type="submit" class="submit-btn" name="" id="">
+          </form>
+        </div>
 
+    </section>
+
+    <section class="contact-map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3671.962228979845!2d72.47380907440004!3d23.02515901623342!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e84d578435693%3A0xaced3b49a5faf269!2sLearniphi%20Technology%20Pvt.%20Ltd.!5e0!3m2!1sen!2sin!4v1707541533603!5m2!1sen!2sin" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    </section>
+    <!-- ending of contect us page -->
     <!-- footer section -->
     <footer>
       <div class="footer-1">
