--- a/global_map.html
+++ b/global_map.html
@@ -75,7 +75,15 @@
       </div>
     </header>
     <!-- End of Header section -->
+    <!-- Global Halth mapn section -->
+    <section class="global-map-section">
+        <div class="glob-map-sec-1">
+          <iframe src="https://ourworldindata.org/grapher/continents-according-to-our-world-in-data" loading="lazy" style="width: 100%; height: 600px; border: 0px none;"></iframe>
+        </div>
 
+    </section>
+    <!-- end of Global Halth mapn section -->
+    <!--  -->
     <!-- footer section -->
     <footer>
       <div class="footer-1">
