--- a/news.html
+++ b/news.html
@@ -75,7 +75,138 @@
       </div>
     </header>
     <!-- End of Header section -->
-    
+    <!-- News section -->
+    <section class="news-section-container">
+      <div class="hero-section-2">
+        <div class="sec3-heading">
+          <h2>Our latest News</h2>
+        </div>
+        <div class="news-cards">
+          <div class="img-card iCard-style1">
+            <div class="card-content">
+              <span class="card-title">Breakthrough in Cancer Research</span>
+              <div class="card-image">
+                <img src="./Images/Breakthrough in Cancer Research.jpg" />
+              </div>
+
+              <div class="card-text">
+                <p>
+                  Promising Advances in Targeted Therapy for Breast Cancer.
+                  Researchers have made significant strides in developing
+                  targeted therapies for breast cancer, offering new hope for
+                  more effective and personalized treatment options.
+                </p>
+              </div>
+            </div>
+
+            <div class="card-link">
+              <a href="./news.html" title="Read Full"><span>Read Full</span></a>
+            </div>
+          </div>
+
+          <div class="img-card iCard-style1">
+            <div class="card-content">
+              <span class="card-title">Global Vaccination Milestone</span>
+              <div class="card-image">
+                <img src="./Images/vaccinnation.jpg" />
+              </div>
+              <div class="card-text">
+                <p>
+                  In a remarkable achievement, the global vaccination campaign
+                  has surpassed 2 billion doses administered. Explore the impact
+                  of this milestone and the ongoing efforts to ensure equitable
+                  vaccine distribution worldwide.
+                </p>
+              </div>
+            </div>
+            <div class="card-link">
+              <a href="./news.html" title="Read Full"><span>Read Full</span></a>
+            </div>
+          </div>
+
+          <div class="img-card iCard-style1">
+            <div class="card-content">
+              <span class="card-title">Mental Health Awareness</span>
+              <div class="card-image">
+                <img src="./Images/maditation.jpg" />
+              </div>
+              <div class="card-text">
+                <p>
+                  Join us in raising awareness about mental health and breaking
+                  down the stigma surrounding mental health issues. Discover
+                  resources, personal stories, and initiatives contributing to a
+                  more supportive and understanding society.
+                </p>
+              </div>
+            </div>
+            <div class="card-link">
+              <a href="./news.html" title="Read Full"><span>Read Full</span></a>
+            </div>
+          </div>
+
+          <div class="img-card iCard-style1">
+            <div class="card-content">
+              <span class="card-title">Tech Innovations in Healthcare</span>
+              <div class="card-image">
+                <img src="./Images/tech-innovation (1).jpg" />
+              </div>
+              <div class="card-text">
+                <p>
+                  Explore the latest technological innovations transforming
+                  healthcare delivery. From telemedicine advancements to
+                  AI-powered diagnostics, discover how technology is shaping the
+                  future of patient-centered care.
+                </p>
+              </div>
+            </div>
+            <div class="card-link">
+              <a href="./news.html" title="Read Full"><span>Read Full</span></a>
+            </div>
+          </div>
+
+          <div class="img-card iCard-style1">
+            <div class="card-content">
+              <span class="card-title">Tech Innovations in Healthcare</span>
+              <div class="card-image">
+                <img src="./Images/tech-innovation (1).jpg" />
+              </div>
+              <div class="card-text">
+                <p>
+                  Explore the latest technological innovations transforming
+                  healthcare delivery. From telemedicine advancements to
+                  AI-powered diagnostics, discover how technology is shaping the
+                  future of patient-centered care.
+                </p>
+              </div>
+            </div>
+            <div class="card-link">
+              <a href="./news.html" title="Read Full"><span>Read Full</span></a>
+            </div>
+          </div>
+
+          <div class="img-card iCard-style1">
+            <div class="card-content">
+              <span class="card-title">Tech Innovations in Healthcare</span>
+              <div class="card-image">
+                <img src="./Images/tech-innovation (1).jpg" />
+              </div>
+              <div class="card-text">
+                <p>
+                  Explore the latest technological innovations transforming
+                  healthcare delivery. From telemedicine advancements to
+                  AI-powered diagnostics, discover how technology is shaping the
+                  future of patient-centered care.
+                </p>
+              </div>
+            </div>
+            <div class="card-link">
+              <a href="./news.html" title="Read Full"><span>Read Full</span></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end of news section -->
     <!-- footer section -->
     <footer>
       <div class="footer-1">
