--- a/global_map.html
+++ b/global_map.html
@@ -37,7 +37,7 @@
         <ul class="logo-section">
           <a href="./index.html">
             <img
-              src="./Images/main_logo.png"
+              src="./Images/final logo.png"
               alt="Website logo"
               class="main_logo"
           /></a>
@@ -46,7 +46,7 @@
           <li>
             <a href="./index.html">
               <img
-                src="./Images/main_logo.png"
+                src="./Images/final logo.png"
                 alt="Website logo"
                 class="main_logo"
             /></a>
@@ -61,7 +61,7 @@
           <li><button class="login-btn">Login</button></li>
         </ul>
         <ul class="toggle_btn">
-          <i class="fa-solid fa-bars-staggered"></i>
+          <i class="fa-solid fa-bars-staggered" id="three-line-icon"></i>
         </ul>
       </nav>
       <div class="dropdown_menu">
@@ -87,7 +87,7 @@
     <!-- footer section -->
     <footer>
       <div class="footer-1">
-        <img src="./Images/main_logo.png" alt="website_logo" />
+        <img src="./Images/final logo.png" alt="website_logo" />
         <h5>&copy; 2024 Global Health Tracker, All rights reserved</h5>
       </div>
       <div class="footer-2">
