--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <ul class="logo-section">
           <a href="./index.html">
             <img
-              src="./Images/main_logo.png"
+              src="./Images/final logo.png"
               alt="Website logo"
               class="main_logo"
           /></a>
@@ -45,7 +45,7 @@
           <li>
             <a href="./index.html">
               <img
-                src="./Images/main_logo.png"
+                src="./Images/final logo.png"
                 alt="Website logo"
                 class="main_logo"
             /></a>
@@ -60,7 +60,7 @@
           <li><button class="login-btn">Login</button></li>
         </ul>
         <ul class="toggle_btn">
-          <i class="fa-solid fa-bars-staggered"></i>
+          <i class="fa-solid fa-bars-staggered" id="three-line-icon"></i>
         </ul>
       </nav>
       <div class="dropdown_menu">
@@ -75,7 +75,7 @@
 
       <div class="full-secreen-video">
         <video
-          src="./videos/istockphoto-482636245-640_adpp_is.mp4"
+          src="./videos/1475082_people_business_3840x2160.mp4"
           autoplay
           muted
           loop
@@ -281,7 +281,7 @@
     <!-- footer section -->
     <footer class="footer-section">
       <div class="footer-1">
-        <img src="./Images/main_logo.png" alt="website_logo" />
+        <img src="./Images/final logo.png" alt="website_logo" />
         <h5>&copy; 2024 Global Health Tracker, All rights reserved</h5>
       </div>
       <div class="footer-2">
