--- a/Statistics.html
+++ b/Statistics.html
@@ -78,6 +78,7 @@
 
     <!--stat-section-1  -->
     <section class="stat-section">
+      <marquee behavior="alternate" direction=""><h3><mark>In 2019, the global death rate was 7.47 per 1,000 population, while in 2021 it reached a rate of 8.72. </mark></h3>  </marquee>
       <div class="stat-section-heading">
         <h1>Country-wise Health Statistics Page</h1>
       </div>
