--- a/index.html
+++ b/index.html
@@ -28,6 +28,43 @@
       src="https://kit.fontawesome.com/267448ee0a.js"
       crossorigin="anonymous"
     ></script>
+    <!-- text animation css -->
+    <style>
+@import url("https://fonts.googleapis.com/css?family=Raleway:900&display=swap");
+
+#container {
+    position: absolute;
+    margin: auto;
+    width: 80%;
+    height: 80pt;
+top: 15%;
+align-self: center;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-content: center;
+
+}
+
+#text1,
+#text2 {
+    position: absolute;
+    height: min-content;
+    width: 100%;
+    display: inline-block;
+    font-family: "Raleway", sans-serif;
+    font-size: 80pt;
+  color: white;
+    text-align: center;
+    user-select: none;
+    filter: url(#threshold) blur(0.6px);
+      background: -webkit-linear-gradient(orange,rgb(188, 12, 241), rgb(212, 4, 4));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+}
+
+    </style>
   </head>
   <body>
     <!-- Header section -->
@@ -80,7 +117,23 @@
           muted
           loop
           class="hero-sec-video"
-        ></video>
+        >
+      </video>
+      <div id="container">
+        <span id="text1"></span>
+        <span id="text2"></span>
+    </div>
+    
+    <svg id="filters">
+        <defs>
+            <filter id="threshold">
+                <feColorMatrix in="SourceGraphic" type="matrix" values="1 0 0 0 0
+                      0 1 0 0 0
+                      0 0 1 0 0
+                      0 0 0 255 -140" />
+            </filter>
+        </defs>
+    </svg>
       </div>
     </header>
     <!-- End of Header section -->
