small screen bg added

--- a/index.html
+++ b/index.html
@@ -112,7 +112,11 @@
       </div>
 
       <div class="full-secreen-video">
-        <img src="./Images/small-screen-img.jpg" alt="" id="small-screen-bg-img">
+        <img
+          src="./Images/small-screen-img.jpg"
+          alt=""
+          id="small-screen-bg-img"
+        />
         <video
           src="./videos/1475082_people_business_3840x2160.mp4"
           autoplay
