colors of hover changed

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- text animation css -->
-    <style>
-     
-    </style>
+    <style></style>
   </head>
   <body>
     <!-- Header section -->
