country details page added

--- a/Country/Country.html
+++ b/Country/Country.html
@@ -11,7 +11,7 @@
     <header>
       <nav>
         <ul class="logo-section">
-          <a href="./index.html">
+          <a href="../index.html">
             <img
               src="../Images/final logo.png"
               alt="Website logo"
@@ -20,7 +20,7 @@
         </ul>
         <ul>
           <li>
-            <a href="./index.html">
+            <a href="../index.html">
               <img
                 src="../Images/final logo.png"
                 alt="Website logo"
@@ -28,12 +28,12 @@
             /></a>
           </li>
 
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./Statistics.html">Statistics</a></li>
-          <li><a href="./global_map.html">Global Map </a></li>
-          <li><a href="./news.html">News</a></li>
-          <li><a href="./about.html">About</a></li>
-          <li><a href="./contact.html">Contact</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../Statistics.html">Statistics</a></li>
+          <li><a href="../global_map.html">Global Map </a></li>
+          <li><a href="../news.html">News</a></li>
+          <li><a href="../about.html">About</a></li>
+          <li><a href="../contact.html">Contact</a></li>
           <li><button class="login-btn">Login</button></li>
         </ul>
         <ul class="toggle_btn">
@@ -41,12 +41,12 @@
         </ul>
       </nav>
       <div class="dropdown_menu">
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./Statistics.html">Statistics</a></li>
-        <li><a href="./global_map.html">Global Map </a></li>
-        <li><a href="./news.html">News</a></li>
-        <li><a href="./about.html">About</a></li>
-        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../Statistics.html">Statistics</a></li>
+        <li><a href="../global_map.html">Global Map </a></li>
+        <li><a href="../news.html">News</a></li>
+        <li><a href="../about.html">About</a></li>
+        <li><a href="../contact.html">Contact</a></li>
         <li><button class="login-btn">Login</button></li>
       </div>
     </header>
@@ -79,9 +79,9 @@
       </div>
       <div class="footer-2">
         <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./about.html">About</a></li>
-          <li><a href="./contact.html">Contact</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../about.html">About</a></li>
+          <li><a href="../contact.html">Contact</a></li>
         </ul>
         <ul>
           <li><a href="./news.html">News and Updates</a></li>
