admin panel added

--- a/Country/Country.html
+++ b/Country/Country.html
@@ -6,6 +6,13 @@
     <title>Country Details</title>
     <link rel="stylesheet" href="../CSS/stat.css" />
     <link rel="stylesheet" href="../CSS/style.css" />
+        <!-- Title image link -->
+        <link
+        rel="shortcut icon"
+        href="./Images/main_logo.png"
+        type="image/x-icon"
+      />
+  
   </head>
   <body>
     <header>
@@ -52,25 +59,8 @@
     </header>
     <!--stat-section-1  -->
     <section class="stat-section">
-
-
-        <!-- <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCn4Teeik77CP6907KSqQMPCuO2kNmmDwg&callback=initMap"></script>
-
-        <script>
-          // Define the initMap function
-          function initMap() {
-            // Your map initialization code goes here
-            // Example: (replace with your actual map configuration)
-            var map = new google.maps.Map(document.getElementById('map'), {
-              center: {lat: -34.397, lng: 150.644},
-              zoom: 8
-            });
-          }
-        </script> -->
-    
+        
     </section>
-    <!--end of stat-section-1  -->
-
     <!-- footer section -->
     <footer>
       <div class="footer-1">
