--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
           <li><a href="./news.html">News</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./contact.html">Contact</a></li>
-          <li><button class="login-btn">Login</button></li>
+          <li><button class="login-btn" onclick="openAdminLogin()">Login</button></li>
         </ul>
         <ul class="toggle_btn">
           <i class="fa-solid fa-bars-staggered" id="three-line-icon"></i>
@@ -71,7 +71,7 @@
         <li><a href="./news.html">News</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./contact.html">Contact</a></li>
-        <li><button class="login-btn">Login</button></li>
+        <li><button class="login-btn" onclick="openAdminLogin()">Login</button></li>
       </div>
     </header>
     <!-- End of Header section -->
